--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ body {
   padding: 0;
   margin: 0;
   border-radius: 8px;
-  box-shadow: 0 8px 16px rgba(0,0,0,0.2);
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
 
 .dropdown-menu li a {
@@ -112,7 +112,6 @@ body {
 .dropdown:hover .dropdown-menu {
   display: block;
 }
-
 
 /* Section Umum */
 section {
@@ -198,8 +197,12 @@ section ul li {
 }
 
 @keyframes colorChange {
-  0% { color: white; }
-  100% { color: var(--primary-color); }
+  0% {
+    color: white;
+  }
+  100% {
+    color: var(--primary-color);
+  }
 }
 
 .typewriter {
@@ -207,8 +210,8 @@ section ul li {
   display: inline-block;
   white-space: nowrap;
   overflow: hidden;
-  animation: blink 0.7s step-end infinite, color-change 4s linear infinite; 
-  height: 50px; 
+  animation: blink 0.7s step-end infinite, color-change 4s linear infinite;
+  height: 50px;
 }
 
 .typing {
@@ -217,7 +220,7 @@ section ul li {
   color: var(--primary-color);
   display: inline-block;
   width: auto;
-  height: 50px; 
+  height: 50px;
   line-height: 50px;
   vertical-align: middle;
 }
@@ -225,12 +228,10 @@ section ul li {
   display: inline-block;
   overflow: hidden;
   width: auto;
-  height: 50px; 
-  line-height: 50px; 
-  vertical-align: middle; 
+  height: 50px;
+  line-height: 50px;
+  vertical-align: middle;
 }
-
-
 
 @keyframes typing {
   0% {
@@ -275,7 +276,6 @@ section ul li {
   box-shadow: 0 4px 20px var(--accent-color);
 }
 
-
 /* About Section */
 .about {
   background-color: #0f172a;
@@ -316,7 +316,7 @@ section ul li {
   flex: 2;
 }
 
-.section-title-about{
+.section-title-about {
   font-size: 2.5rem;
   color: var(--primary-color);
   margin-bottom: 1.5rem;
@@ -537,7 +537,6 @@ section ul li {
   background-color: var(--primary-color);
 }
 
-
 .image-gallery {
   padding: 4rem 1rem;
   background-color: var(--bg-color);
@@ -635,7 +634,6 @@ section ul li {
   outline: none;
 }
 
-
 /* Section Title */
 .section-title {
   text-align: center;
@@ -709,7 +707,6 @@ section ul li {
   margin-bottom: 15px;
 }
 
-
 /* Card Style */
 .card {
   background-color: #1e293b;
@@ -767,7 +764,8 @@ section ul li {
   margin: auto;
 }
 
-.contact-info, .contact-form {
+.contact-info,
+.contact-form {
   flex: 1;
   min-width: 280px;
   max-width: 500px;
@@ -850,13 +848,11 @@ section ul li {
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
 }
 
-
 .social-icons a:hover {
   background-color: var(--primary-color);
   color: white;
   transform: translateY(-3px);
 }
-
 
 /* Footer */
 footer {
@@ -893,7 +889,9 @@ footer {
   }
 
   .hero-video {
-    height: 100%;
+    max-width: 100%;
+    height: auto;
+    display: block;
   }
 
   .content h1 {
@@ -910,8 +908,6 @@ footer {
     font-size: 1rem;
     padding: 0.6rem 1.2rem;
   }
-
-  
 
   .about-container {
     flex-direction: column;
@@ -941,7 +937,6 @@ footer {
     text-align: center;
     max-width: 100%;
   }
-  
 }
 
 @media (max-width: 480px) {
