--- a/style.css
+++ b/style.css
@@ -888,6 +888,12 @@ footer {
     padding: 2rem 1rem;
   }
 
+  .font-card-container {
+    max-width: 100%;
+    height: auto;
+    display: block;
+  }
+
   .content h1 {
     display: block;
     font-size: 2rem;
