--- a/style.css
+++ b/style.css
@@ -894,7 +894,8 @@ footer {
   }
 
   .image-card {
-    max-width: auto;
+    width: 100%;
+    max-width: 600px;
     height: auto;
   }
   .content h1 {
