--- a/style.css
+++ b/style.css
@@ -560,7 +560,7 @@ section ul li {
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 1.5rem;
   max-width: 1200px;
-  margin: 0 auto;
+  margin: auto 10px;
 }
 
 .image-card {
